--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
-    background-color: lightgray;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
+    background-color: beige;
 }
 header{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -33,5 +32,20 @@ footer{
 form{
     margin: auto;
     align-content: auto;
+}
+footer{
+    background-color: black;
+    color: #707070;
+}
+button{
+    background-color: black
+    color #dda732;
+        width: auto;
+    margin:0px auto;
+    border: 1px solid black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: flex;
+    justify-content: center;
+    font-variant-caps: all-petite-caps;
 }
 
