--- a/css/stiles.css
+++ b/css/stiles.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
     padding: 0%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 header ul{
@@ -9,12 +11,15 @@ header ul{
     justify-content: flex-end;
     list-style: none;
     gap: 20px;
-    
+}
+header ul a{
+    text-decoration: none;
+    color: black;
 }
 header {
-    display: flex; /* Coloca el logo y el menú en una misma línea */
-    justify-content: space-between; /* Logo a la izquierda, menú a la derecha */
-    padding: 15px 30px; /* Espaciado interno */
+    display: flex; 
+    justify-content: space-between; 
+    padding: 15px 30px; 
 }
 nav img {
   width: 100%;                  /* Que ocupe todo el ancho de la pantalla */
